--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-mdx": "^1.2.47",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-robots-txt": "1.5.3",
     "gatsby-plugin-sharp": "^2.6.32",
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-remark-copy-linked-files": "^2.3.19",
